[workspace]
members = [
  "packages/excss/crates/*",
]
resolver = "2"

[workspace.dependencies]
# fasthash = "0.4"
getrandom = { version = "0.2" }
grass = "0.13"
itertools = "0.9"
serde = "1"
serde_json = "1"
serde-wasm-bindgen = "0.5"
swc_core = { version = "0.79" }
murmur3 = {version = "0.5" }
wasm-bindgen = { version = "0.2" }
