[workspace]
members = [
  "packages/compiler/crates/*",
]
resolver = "2"

[workspace.dependencies]
getrandom = "0.2"
grass = "0.13"
grass_compiler = "0.13"
itertools = "0.9"
scoped-tls = "1.0"
serde = "1"
serde_json = "1"
serde-wasm-bindgen = "0.5"
swc_core = "0.79"
murmur3 = "0.5"
wasm-bindgen = "0.2"
